  * Remove quilt from Build-Depends. It's no longer needed for source format
    3.0 (quilt).
  * Confirm symbol files for official 4.7.1 on amd64.
  * 4.7.1 tarball ships with bogus executable bits on some data files in
    mkspecs, docs, examples and demos subdirs. Remove those -x bits when files
    are installed to debian/tmp.
  * Fix formatting error in the qmake-qt4.1 manpage at line 83.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 06 Oct 2010 14:55:15 +0200

qt4-x11 (4:4.7.0~rc1-1) experimental; urgency=low

  * New upstream release.
  * Remove 0001_add_webkit_qt_config.patch in favor of
    0001_webkit_self_injection_into_qt_configuration.patch.
  * Add patches:
    - 0002_fix_qstatictext_with_opengl1_engine.patch
      OpenGL1 paint engine transforms text coordinates itself and
      does not require QStaticText to use device coordinates.
    - 0003_add_three_new_style-hints_to_qfont.patch
      Add three new style-hints to QFont to match CSS generic font families.
    - 0004_fix_qstatictext_copy_constructor.patch
      Fix QStaticText copy constructor to also copy text option property.
  * Update debian/control:
    - bump Standards-Version to 3.9.1 (no changes needed).
    - add libqt4-assistant and libqt4-webkit-dbg dummy transitional packages.
  * Update debian/rules:
    - add -no-openvg configure option.
  * Refresh patches.
  * Update installed files.
  * Update symbols files.

 -- Fathi Boudra <fabo@debian.org>  Thu, 26 Aug 2010 19:54:00 +0300

qt4-x11 (4:4.7.0~beta2-3) experimental; urgency=low

  * Add 0001_add_webkit_qt_config.patch to load modules .pri files.
    Fix the detection of Qt WebKit when shipped standalone.
  * Update debian/control:
    - remove references to Debian in package descriptions
      (derivatives friendly).
    - add libqtwebkit-dev to libqt4-dev package.
    - remove libpulse-dev build dependency. It's used to build Phonon.

 -- Fathi Boudra <fabo@debian.org>  Tue, 20 Jul 2010 16:55:20 +0300
