@@ -57,6 +57,8 @@ qt4-x11 (4:4.7.1-0r1) UNRELEASED; urgency=low
     mkspecs, docs, examples and demos subdirs. Remove those -x bits when files
     are installed to debian/tmp.
   * Fix formatting error in the qmake-qt4.1 manpage at line 83.
+  * Use dh_auto_* wrappers in place of $(MAKE) within debian/rules in order to
+    get automatic handling of parallel building settings for these calls.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 06 Oct 2010 14:55:15 +0200
 
